Code up and running on JDK-13